# tgg-subtitle-skill

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
examples/: ai_terms_cases.fixed.srt  ai_terms_cases.merge-report.md  ai_terms_cases.srt  coverage_full_input.fixed.srt  coverage_full_input.merge-report.md  coverage_full_input.srt
jianying_subtitle_proofread/: __init__.py  ai_terms.py  cli.py  flatten.py  llm.py  merge.py  models.py  prompting.py  reporting.py  srt_io.py  validation.py
references/: README.md
tests/: test_cli.py  test_coverage_dataset.py  test_end_to_end_coverage.py  test_flatten.py  test_llm.py  test_merge.py  test_prompting_coverage.py  test_smoke.py  test_srt_io.py  test_validation.py
tests/fixtures/: coverage_full_input.fixed.srt  coverage_full_input.merge-report.md
